--- a/client/src/app/Pages/statistics/statistics.component.html
+++ b/client/src/app/Pages/statistics/statistics.component.html
@@ -1,9 +1,8 @@
 @if (!dataLoaded) {
 <app-spinner />
 } @else {
+<app-headline [subHeading]="'stats'" [heading]="trainingPlanTitle" />
 <main>
-  <app-headline [subHeading]="'stats'" [heading]="'Test'" />
-
   <app-multi-select
     [options]="allExercises"
     [initialSelected]="selectedExercises!"
