Implement first idea for auto timer start

--- a/client/src/app/Pages/statistics/statistics.component.html
+++ b/client/src/app/Pages/statistics/statistics.component.html
@@ -1,7 +1,7 @@
 @if (!dataLoaded) {
 <app-spinner />
 } @else {
-<app-headline [subHeading]="'stats'" [heading]="trainingPlanTitle" />
+<app-headline [subHeading]="'statistiken'" [heading]="trainingPlanTitle" />
 <main>
   <app-multi-select
     [options]="allExercises"
