Inherit background when alert type is light

--- a/client/src/app/components/alert/alert.component.html
+++ b/client/src/app/components/alert/alert.component.html
@@ -1,3 +1,3 @@
-<div [ngClass]="'alert alert-' + alertType" role="alert">
+<div [ngClass]="['alert', 'alert-' + alertType, alertType === 'light' ? 'background-image' : '']" role="alert">
   {{ alertText }}
 </div>
