--- a/client/src/app/Pages/exercises/exercises.component.html
+++ b/client/src/app/Pages/exercises/exercises.component.html
@@ -1,5 +1,5 @@
 @if (isLoading) {
-  <app-spinner></app-spinner>
+  <app-exercise-table-skeleton />
 } @else {
   <div class="container">
     <form (submit)="onSubmit($event)">
