--- a/client/src/app/exercise-table-skeleton/exercise-table-skeleton.component.html
+++ b/client/src/app/exercise-table-skeleton/exercise-table-skeleton.component.html
@@ -13,7 +13,7 @@
       <div class="skeleton-row top-border">
         <div class="skeleton-cell"></div>
       </div>
-      @for (n of [1, 2, 3, 4]; track n) {
+      @for (n of [1, 2, 3]; track n) {
         <div class="skeleton-row">
           <div class="skeleton-cell"></div>
         </div>
