--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -5,7 +5,9 @@
     <div class="headline-container" [ngClass]="{ 'background-image': isMobile }">
       <app-headline [subHeading]="subHeading" [heading]="trainingPlanData.title" />
       @if (isMobile) {
-        <app-icon-button [iconClass]="'bx bx-timer'" (buttonClick)="switchToTimerView()" />
+        <div class="timer-wrapper">
+          <app-icon-button [iconClass]="'bx bx-timer'" (buttonClick)="switchToTimerView()" />
+        </div>
       }
     </div>
 
@@ -156,7 +158,9 @@
   </form>
 }
 
-<div class="fixed-bottom-bar">
-  <i class="bx bx-left-arrow-alt icon" (click)="navigateWeek(-1)"></i>
-  <i class="bx bx-right-arrow-alt icon" (click)="navigateWeek(1)"></i>
-</div>
+@if (!isMobile) {
+  <div class="fixed-bottom-bar">
+    <i class="bx bx-left-arrow-alt icon" (click)="navigateWeek(-1)"></i>
+    <i class="bx bx-right-arrow-alt icon" (click)="navigateWeek(1)"></i>
+  </div>
+}
