Save button now on top in mobile view

--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -5,7 +5,8 @@
     <div class="headline-container" [ngClass]="{ 'background-image': isMobile }">
       <app-headline [subHeading]="subHeading" [heading]="trainingPlanData.title" />
       @if (isMobile) {
-        <div class="timer-wrapper">
+        <div>
+          <app-icon-button [iconClass]="'bx bx-save'" (buttonClick)="saveTrainingData()" />
           <app-icon-button [iconClass]="'bx bx-timer'" (buttonClick)="switchToTimerView()" />
         </div>
       }
@@ -151,7 +152,9 @@
       ></app-pagination>
     </div>
 
-    <input type="submit" class="btn btn-dark" />
+    @if (!isMobile) {
+      <input type="submit" class="btn btn-dark" />
+    }
     <button class="btn btn-outline-dark m-1" id="reset-btn" type="button" (click)="openAutoProgressionModal()">
       Options
     </button>
