Refactor multi select component

--- a/client/src/app/Pages/statistics/statistics.component.html
+++ b/client/src/app/Pages/statistics/statistics.component.html
@@ -17,8 +17,8 @@
   <app-headline [subHeading]="'statistiken'" [heading]="trainingPlanTitle" />
   <main>
     <app-multi-select
-      [options]="allExercises"
-      [initialSelected]="selectedExercises!"
+      [items]="allExercises"
+      [selectedItems]="selectedExercises!"
       (selectionChange)="changeDisplayCategories($event)"
     ></app-multi-select>
 
