Remove unused files and rework folder structure 1

--- a/client/src/app/multi-select/multi-select.component.html
+++ b/client/src/app/multi-select/multi-select.component.html
@@ -1,6 +1,6 @@
 <div class="dropdown" [class.show]="isOpen()" (click)="toggleDropdown()">
   <button
-    class="btn btn-light dropdown-toggle"
+    class="btn btn-light"
     type="button"
     aria-haspopup="true"
     aria-expanded="isOpen()"
