--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -1,3 +1,5 @@
+@import 'client/src/css/variables';
+
 #header {
   position: fixed;
   left: 0;
@@ -16,7 +18,7 @@
 
   & .dropdown-item.active,
   & .dropdown-item:active {
-    background: #a78bfa;
+    background: $accent-color;
   }
 }
 
