--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 @import './css/tooltip.scss';
 @import './css/input.scss';
+@import './css/variables.scss';
 
 * {
   box-sizing: border-box;
