--- a/client/src/app/components/multi-select/multi-select.component.scss
+++ b/client/src/app/components/multi-select/multi-select.component.scss
@@ -1,13 +1,25 @@
+@import 'client/src/css/variables';
+
 .dropdown {
   width: 100%;
+  max-width: 100%;
+  padding: 5px 7px;
+  border-bottom: 1px solid #cbd5e1;
 }
 
-.btn {
-  background-color: inherit;
-}
+.chip-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  max-width: 100%;
 
+  & .chip {
+    background: $light-grey;
+  }
+}
 .dropdown button {
   width: 100%;
+  max-width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -20,7 +32,6 @@
 .dropdown-menu {
   width: 100%;
   overflow-y: auto;
-  background-image: url('/images/background/white-3.avif');
   opacity: 1;
 
   .form-control {
