--- a/client/src/app/activity-calendar/activity-calendar.component.html
+++ b/client/src/app/activity-calendar/activity-calendar.component.html
@@ -1,6 +1,3 @@
-<div class="calendar-header">
-  <h6>447 contributions in 2024</h6>
-</div>
 <div class="calendar-container">
   <div class="calendar-grid">
     <div class="months">
@@ -24,16 +21,24 @@
         <div>Fri</div>
       </div>
       <div class="contribution-grid">
-        <div *ngFor="let day of grid; let i = index" class="day" [ngClass]="getDayClass(i)"></div>
+        <div
+          *ngFor="let day of grid"
+          class="day"
+          [ngClass]="'level-' + day.level"
+          [appTooltip]="day.value.toString()"
+        ></div>
       </div>
     </div>
   </div>
-  <div class="legend">
-    <span>Less</span>
-    <div class="legend-color"></div>
-    <div class="legend-color"></div>
-    <div class="legend-color"></div>
-    <div class="legend-color"></div>
-    <span>More</span>
+  <div class="calendar-footer">
+    <div class="training-text">{{ trainingDays() }} Trainings dieses Jahr</div>
+    <div class="legend">
+      <span>Less</span>
+      <div class="legend-color level-1"></div>
+      <div class="legend-color level-2"></div>
+      <div class="legend-color level-3"></div>
+      <div class="legend-color level-4"></div>
+      <span>More</span>
+    </div>
   </div>
 </div>
