--- a/client/src/app/activity-calendar/activity-calendar.component.scss
+++ b/client/src/app/activity-calendar/activity-calendar.component.scss
@@ -1,21 +1,9 @@
 @import 'client/src/css/variables';
 
-$level-1-color: lighten($accent-color, 30%); /* Hellerer Farbton */
-$level-2-color: lighten($accent-color, 15%); /* Mittelhell */
-$level-3-color: darken($accent-color, 10%); /* Mitteldunkel */
-$level-4-color: darken($accent-color, 20%); /* Dunkelster Farbton */
-
-.calendar-header {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  margin-bottom: 10px;
-}
-
-.calendar-header h6 {
-  margin: 0;
-  font-weight: bold;
-}
+$level-1-color: lighten($accent-color, 10%);
+$level-2-color: $accent-color;
+$level-3-color: darken($accent-color, 5%);
+$level-4-color: darken($accent-color, 10%);
 
 .calendar-container {
   padding: 1rem;
@@ -25,8 +13,9 @@ $level-4-color: darken($accent-color, 20%); /* Dunkelster Farbton */
   .calendar-grid {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
   }
+
   .months {
     display: grid;
     padding-left: 2.125rem;
@@ -44,7 +33,7 @@ $level-4-color: darken($accent-color, 20%); /* Dunkelster Farbton */
       gap: 0.8rem;
       font-size: 12px;
       color: #6c757d;
-      margin-right: 10px; /* Space between days and grid */
+      margin-right: 10px;
     }
   }
 
@@ -78,20 +67,53 @@ $level-4-color: darken($accent-color, 20%); /* Dunkelster Farbton */
     }
   }
 
-  .legend {
+  .calendar-footer {
     display: flex;
+    justify-content: space-between;
+    padding-left: 2.125rem;
     align-items: center;
-    justify-content: flex-end;
-    font-size: 12px;
-    color: #6c757d;
     margin-top: 1rem;
 
-    & .legend-color {
-      width: 12px;
-      height: 12px;
-      margin: 0 5px;
-      background-color: #e9ecef;
-      border-radius: 2px;
+    .training-text {
+      font-size: 16px;
+      font-weight: bold;
+      color: #939393; /* Color for contrast */
+      margin-right: 20px; /* Space between text and legend */
+      line-height: 1; /* Adjust line-height for better vertical alignment */
+    }
+
+    .legend {
+      display: flex;
+      gap: 6px;
+      font-size: 12px;
+      color: #6c757d;
+      align-items: center; /* Ensure legend items are centered vertically */
+
+      .legend-color {
+        width: 12px;
+        height: 12px;
+        background-color: #e9ecef;
+        border-radius: 2px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &.level-1 {
+          background-color: $level-1-color;
+        }
+
+        &.level-2 {
+          background-color: $level-2-color;
+        }
+
+        &.level-3 {
+          background-color: $level-3-color;
+        }
+
+        &.level-4 {
+          background-color: $level-4-color;
+        }
+      }
     }
   }
 }
