--- a/client/src/app/activity-calendar/activity-calendar.component.scss
+++ b/client/src/app/activity-calendar/activity-calendar.component.scss
@@ -75,11 +75,10 @@ $level-4-color: darken($accent-color, 10%);
     margin-top: 1rem;
 
     .training-text {
-      font-size: 16px;
-      font-weight: bold;
-      color: #939393; /* Color for contrast */
-      margin-right: 20px; /* Space between text and legend */
-      line-height: 1; /* Adjust line-height for better vertical alignment */
+      font-size: 14px;
+      color: #939393;
+      margin-right: 20px;
+      line-height: 1;
     }
 
     .legend {
@@ -87,7 +86,7 @@ $level-4-color: darken($accent-color, 10%);
       gap: 6px;
       font-size: 12px;
       color: #6c757d;
-      align-items: center; /* Ensure legend items are centered vertically */
+      align-items: center;
 
       .legend-color {
         width: 12px;
