Add new activity chart to menu

--- a/client/src/app/activity-calendar/activity-calendar.component.html
+++ b/client/src/app/activity-calendar/activity-calendar.component.html
@@ -10,9 +10,9 @@
       <div>Jul</div>
       <div>Aug</div>
       <div>Sep</div>
-      <div>Oct</div>
+      <!--       <div>Oct</div>
       <div>Nov</div>
-      <div>Dec</div>
+      <div>Dec</div> -->
     </div>
     <div class="contributions-wrapper">
       <div class="days">
