--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -19,7 +19,7 @@
         </li>
         <li><hr class="dropdown-divider" /></li>
         <li>
-          <a href="/statistics" #navLink class="dropdown-item" (click)="navigateTo($event)">Statistiken</a>
+          <a href="/user/usage" #navLink class="dropdown-item" (click)="navigateTo($event)">Nutzungstatistiken</a>
         </li>
       </ul>
     </div>
