--- a/client/src/app/activity-calendar/activity-calendar.component.scss
+++ b/client/src/app/activity-calendar/activity-calendar.component.scss
@@ -14,14 +14,17 @@ $level-4-color: darken($accent-color, 10%);
     display: flex;
     flex-direction: column;
     gap: 5px;
+    max-width: 100vw;
+    overflow-x: auto;
   }
 
   .months {
-    display: grid;
+    display: flex;
+    justify-content: space-between;
     padding-left: 2.125rem;
-    grid-template-columns: repeat(12, 1fr);
     font-size: 12px;
     color: #6c757d;
+    text-align: center; /* Centers the month names */
   }
 
   .contributions-wrapper {
@@ -39,13 +42,13 @@ $level-4-color: darken($accent-color, 10%);
 
   .contribution-grid {
     display: grid;
-    grid-template-columns: repeat(52, 12px);
-    grid-template-rows: repeat(7, 12px);
+    grid-template-columns: repeat(52, 1fr);
+    grid-template-rows: repeat(7, 1fr);
     gap: 4px;
 
     .day {
-      width: 12px;
-      height: 12px;
+      width: 0.8925rem;
+      height: 0.8925rem;
       background-color: #e9ecef;
       border-radius: 2px;
 
