--- a/client/src/app/activity-calendar/activity-calendar.component.scss
+++ b/client/src/app/activity-calendar/activity-calendar.component.scss
@@ -19,15 +19,16 @@ $level-4-color: darken($accent-color, 10%);
   }
 
   .months {
-    display: flex;
-    justify-content: space-between;
-    padding-left: 2.125rem;
+    display: grid;
+    width: calc(52 * 0.8925rem + 52 * 4px);
+    grid-template-columns: repeat(12, 1fr); /* Changed from grid-template-rows to grid-template-columns */
+    padding-left: 0.5rem;
     font-size: 12px;
     color: #6c757d;
     text-align: center; /* Centers the month names */
   }
 
-  .contributions-wrapper {
+  .day-and-grid-wrapper {
     display: flex;
 
     .days {
@@ -48,7 +49,7 @@ $level-4-color: darken($accent-color, 10%);
 
     .day {
       width: 0.8925rem;
-      height: 0.8925rem;
+      height: 0.75rem;
       background-color: #e9ecef;
       border-radius: 2px;
 
