Simplified app component html

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-header></app-header>
+<app-header />
+
 <div class="outlet-wrapper">
   <router-outlet />
 </div>
-<app-toast></app-toast>
+
+<app-toast />
