--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -99,6 +99,7 @@
             <td data-cell="Weight">
               <input
                 #weightInput
+                appInteractiveElement
                 [placeholder]="
                   previousTrainingDayExercise?.exercise && previousTrainingDayExercise.exercise === exercise?.exercise
                     ? previousTrainingDayExercise?.weight
@@ -123,6 +124,7 @@
             <td data-cell="@RPE">
               <input
                 type="string"
+                appInteractiveElement
                 class="transparent-input actualRPE"
                 [name]="namePrefix + 'actualRPE'"
                 [value]="exercise.actualRPE || ''"
