Implement old auto save service via directive

--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -99,7 +99,7 @@
             <td data-cell="Weight">
               <input
                 #weightInput
-                appInteractiveElement
+                weightInput
                 [placeholder]="
                   previousTrainingDayExercise?.exercise && previousTrainingDayExercise.exercise === exercise?.exercise
                     ? previousTrainingDayExercise?.weight
