Implement actual rpe directive

--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -124,7 +124,7 @@
             <td data-cell="@RPE">
               <input
                 type="string"
-                appInteractiveElement
+                actualRpeInput
                 class="transparent-input actualRPE"
                 [name]="namePrefix + 'actualRPE'"
                 [value]="exercise.actualRPE || ''"
