--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -63,20 +63,22 @@
               </select>
             </td>
             <td data-cell="Exercise">
-              <select
-                *ngFor="let category of exerciseData.exerciseCategories"
-                name="day{{ trainingDayIndex }}_exercise{{ k }}_exercise_name"
-                class="exercise-name-selector transparent-input"
-                [disabled]="exercise.category !== category"
-                [style.display]="exercise.category === category ? 'block' : 'none'"
-                (change)="onInputChange($event)"
-              >
-                @for (exerciseName of exerciseData.categorizedExercises[category]; track exerciseName) {
-                  <option [value]="exerciseName" [selected]="exercise.exercise === exerciseName">
-                    {{ exerciseName }}
-                  </option>
-                }
-              </select>
+              @for (category of exerciseData.exerciseCategories; track category) {
+                <select
+                  appInteractiveElement
+                  name="day{{ trainingDayIndex }}_exercise{{ k }}_exercise_name"
+                  class="exercise-name-selector transparent-input"
+                  [disabled]="exercise.category !== category"
+                  [style.display]="exercise.category === category ? 'block' : 'none'"
+                  (change)="onInputChange($event)"
+                >
+                  @for (exerciseName of exerciseData.categorizedExercises[category]; track exerciseName) {
+                    <option [value]="exerciseName" [selected]="exercise.exercise === exerciseName">
+                      {{ exerciseName }}
+                    </option>
+                  }
+                </select>
+              }
             </td>
             <td data-cell="Sets">
               <input
