--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -70,7 +70,6 @@
                   class="exercise-name-selector transparent-input"
                   [disabled]="exercise.category !== category"
                   [style.display]="exercise.category === category ? 'block' : 'none'"
-                  (change)="onInputChange($event)"
                 >
                   @for (exerciseName of exerciseData.categorizedExercises[category]; track exerciseName) {
                     <option [value]="exerciseName" [selected]="exercise.exercise === exerciseName">
@@ -83,6 +82,7 @@
             <td data-cell="Sets">
               <input
                 type="number"
+                appInteractiveElement
                 class="transparent-input sets"
                 name="day{{ trainingDayIndex }}_exercise{{ k }}_sets"
                 [value]="exercise.sets || ''"
@@ -91,6 +91,7 @@
             <td data-cell="Reps">
               <input
                 type="number"
+                appInteractiveElement
                 class="transparent-input reps"
                 [name]="namePrefix + 'reps'"
                 [value]="exercise.reps || ''"
@@ -130,11 +131,11 @@
             <td data-cell="Est. Max">
               <input
                 type="number"
+                appInteractiveElement
                 class="transparent-input estMax"
                 readonly
                 [name]="namePrefix + 'estMax'"
                 [value]="exercise.estMax || ''"
-                (input)="onInputChange($event)"
               />
             </td>
           </tr>
