--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -114,6 +114,7 @@
             <td data-cell="RPE">
               <input
                 type="number"
+                rpeInputDirective
                 class="transparent-input targetRPE"
                 [name]="namePrefix + 'targetRPE'"
                 [value]="exercise.targetRPE || ''"
@@ -122,7 +123,7 @@
             <td data-cell="@RPE">
               <input
                 type="string"
-                actualRpeInput
+                rpeInputDirective
                 class="transparent-input actualRPE"
                 [name]="namePrefix + 'actualRPE'"
                 [value]="exercise.actualRPE || ''"
