--- a/client/src/app/components/toast/toast.component.scss
+++ b/client/src/app/components/toast/toast.component.scss
@@ -29,11 +29,26 @@
   white-space: nowrap;
 }
 
+.toast.error {
+  background: red;
+
+  & .message {
+    color: white;
+  }
+
+  & .message .info {
+    color: white;
+  }
+}
+
 .toast.active {
   transform: translateY(0%);
 }
 
 .toast .message {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
   margin: 0;
   color: #e0e0e0;
   overflow: hidden;
@@ -43,7 +58,6 @@
 
 .toast .info {
   color: #90caf9;
-  margin-left: 2rem;
   flex-shrink: 0;
   text-decoration: none;
 }
