Use new firend card skeleton and add icon

--- a/client/src/app/Pages/friend-modal/friend-modal.component.html
+++ b/client/src/app/Pages/friend-modal/friend-modal.component.html
@@ -20,8 +20,8 @@
       <app-friend-card [friend]="friend" (confirmEvent)="onFriendRequestSend($event)"></app-friend-card>
     }
 
-    @for (i of [1, 2, 3, 4, 5]; track i) {
+    <!--  @for (i of [1, 2, 3, 4, 5]; track i) {
       <app-friend-card-skeleton />
-    }
+    } -->
   }
 </div>
