--- a/client/src/app/components/training-plan-card/training-plan-card.component.html
+++ b/client/src/app/components/training-plan-card/training-plan-card.component.html
@@ -15,7 +15,10 @@
       {{ trainingPlan.lastUpdated }}
     </p>
   </div>
-  <div style="background: inherit; border-color: inherit">
+  <div
+    class="d-flex justify-content-between align-items-center pe-3"
+    style="background: inherit; border-color: inherit"
+  >
     <div>
       <app-icon-button
         [tooltipTitle]="'Ansehen'"
@@ -41,23 +44,6 @@
         (buttonClick)="showDeleteTrainingPlanModal()"
       ></app-icon-button>
     </div>
-    <div class="circular-progress">
-      <svg viewBox="0 0 36 36">
-        <path
-          class="circle-bg"
-          d="M18 2.0845
-          a 15.9155 15.9155 0 0 1 0 31.831
-          a 15.9155 15.9155 0 0 1 0 -31.831"
-        />
-        <path
-          class="circle"
-          [attr.stroke-dasharray]="getStrokeDasharray(trainingPlan.percentageFinished)"
-          d="M18 2.0845
-          a 15.9155 15.9155 0 0 1 0 31.831
-          a 15.9155 15.9155 0 0 1 0 -31.831"
-        />
-      </svg>
-      <div class="percentage-text">{{ trainingPlan.percentageFinished }}%</div>
-    </div>
+    <div>{{ trainingPlan.percentageFinished }} %</div>
   </div>
 </div>
