Represent link in header in training plan when active

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
       </a>
       <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownNavLink">
         <li>
-          <a href="/" #navLink class="dropdown-item" (click)="navigateTo($event)">Trainingspläne</a>
+          <a href="/" #navLink #trainingPlanLink class="dropdown-item" (click)="navigateTo($event)">Trainingspläne</a>
         </li>
         <li>
           <a href="/exercises" #navLink class="dropdown-item" (click)="navigateTo($event)">Übungen</a>
