--- a/client/src/app/components/training-plan-card/training-plan-card.component.html
+++ b/client/src/app/components/training-plan-card/training-plan-card.component.html
@@ -11,9 +11,12 @@
   <div class="card-body" style="overflow-y: auto">
     <h4 class="card-title">{{ trainingPlan.title }}</h4>
     <p class="card-text">{{ trainingPlan.trainingFrequency }} Trainings / Woche</p>
+
     <p class="card-text ml-3">
       {{ trainingPlan.lastUpdated }}
     </p>
+
+    <p class="card-text">{{ trainingPlan.averageTrainingDayDuration }}</p>
   </div>
   <div
     class="d-flex justify-content-between align-items-center pe-3"
